--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,13 @@
         "ios": "cpp",
         "locale": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "ranges": "cpp",
+        "__split_buffer": "cpp",
+        "iomanip": "cpp",
+        "sstream": "cpp"
     }
 }
